--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 .vscode
-docker/libs/eddl
-docker/libs/ecvl
-docker/pylibs/pyeddl
-docker/pylibs/pyecvl
+libs/eddl
+libs/ecvl
+pylibs/pyeddl
+pylibs/pyecvl
