Update ECVL revision

--- a/release.conf
+++ b/release.conf
@@ -25,7 +25,7 @@ DOCKER_IMAGE_PREFIX=
 # ECVL repository
 ECVL_REPOSITORY=https://github.com/deephealthproject/ecvl.git
 ECVL_BRANCH=master
-ECVL_REVISION=v0.1.0
+ECVL_REVISION=1512be8
 
 # PyECVL
 PYECVL_REPOSITORY=https://github.com/deephealthproject/pyecvl.git
