Unset REPO_OWNER and IMAGE_PREFIX from settings

--- a/settings.conf
+++ b/settings.conf
@@ -13,8 +13,8 @@ DOCKER_LOGIN_DONE=true
 #DOCKER_REGISTRY=registry.hub.docker.com
 
 # set Docker repository
-DOCKER_REPOSITORY_OWNER=dhealth
-DOCKER_IMAGE_PREFIX=
+#DOCKER_REPOSITORY_OWNER=dhealth
+#DOCKER_IMAGE_PREFIX=
 
 # latest tag settings
 #DOCKER_IMAGE_LATEST=false
