Update default settings

--- a/settings.conf
+++ b/settings.conf
@@ -1,13 +1,13 @@
-#
-DOCKER_NVIDIA_DEVELOP_IMAGE="nvidia/cuda:10.1-devel"
-DOCKER_NVIDIA_RUNTIME_IMAGE="nvidia/cuda:10.1-runtime"
-DOCKER_BASE_IMAGE_VERSION_TAG=0.2.1
+# set build target (CPU or GPU)
+BUILD_TARGET=CPU
 
-DOCKER_LOGIN_DONE=true
+# enable/disable suffix `-cpu` or `-gpu`
+ENABLE_TARGET_SUFFIX_IMAGE_TAG=false
 
 # set docker user credentials
 #DOCKER_USER=deephealth
 #DOCKER_PASSWORD=""
+DOCKER_LOGIN_DONE=true
 
 # use DockerHub as default registry
 #DOCKER_REGISTRY=registry.hub.docker.com
@@ -18,6 +18,9 @@ DOCKER_LOGIN_DONE=true
 
 # latest tag settings
 #DOCKER_IMAGE_LATEST=false
+
+# date.time as build number
+#DOCKER_IMAGE_TAG=0.1.2
 
 # additional tags
 #DOCKER_IMAGE_TAG_EXTRA=
