--- a/settings.conf
+++ b/settings.conf
@@ -28,22 +28,19 @@ DOCKER_LOGIN_DONE=true
 # ECVL repository
 ECVL_REPOSITORY=https://github.com/deephealthproject/ecvl.git
 ECVL_BRANCH=master
-ECVL_REVISION=1512be8
+ECVL_REVISION=627c803
 
 # PyECVL
 PYECVL_REPOSITORY=https://github.com/deephealthproject/pyecvl.git
 PYECVL_BRANCH=master
-PYECVL_REVISION=0.1.0
+PYECVL_REVISION=56f9de5
 
 # EDDL repository 
 EDDL_REPOSITORY=https://github.com/deephealthproject/eddl.git
 EDDL_BRANCH=master
-EDDL_REVISION=v0.4.2
+EDDL_REVISION=7467cb6
 
 # PyEDDL repository
 PYEDDL_REPOSITORY=https://github.com/deephealthproject/pyeddl.git
 PYEDDL_BRANCH=master
-PYEDDL_REVISION=0.4.0
-
-# date.time as build number
-#DOCKER_IMAGE_TAG=0.1.2
+PYEDDL_REVISION=0.6.0
