Update default settings

--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 # set build target (CPU or GPU)
-BUILD_TARGET=CPU
+BUILD_TARGET=GPU
 
 # enable/disable suffix `-cpu` or `-gpu`
 ENABLE_TARGET_SUFFIX_IMAGE_TAG=false
@@ -43,4 +43,4 @@ EDDL_REVISION=7467cb6
 # PyEDDL repository
 PYEDDL_REPOSITORY=https://github.com/deephealthproject/pyeddl.git
 PYEDDL_BRANCH=master
-PYEDDL_REVISION=0.6.0
+PYEDDL_REVISION=a55c3c4
