Upgrade library to PyECVL@9c4e266

--- a/settings.conf
+++ b/settings.conf
@@ -20,7 +20,7 @@ DOCKER_LOGIN_DONE=true
 #DOCKER_IMAGE_LATEST=false
 
 # date.time as build number
-#DOCKER_IMAGE_TAG=0.1.2
+#DOCKER_IMAGE_TAG=0.4.0rc
 
 # additional tags
 #DOCKER_IMAGE_TAG_EXTRA=
@@ -28,17 +28,17 @@ DOCKER_LOGIN_DONE=true
 # ECVL repository
 ECVL_REPOSITORY=https://github.com/deephealthproject/ecvl.git
 ECVL_BRANCH=master
-ECVL_REVISION=e873315
+ECVL_REVISION=f5f323c
 
 # PyECVL
 PYECVL_REPOSITORY=https://github.com/deephealthproject/pyecvl.git
 PYECVL_BRANCH=master
-PYECVL_REVISION=8effe45
+PYECVL_REVISION=9c4e266
 
 # EDDL repository 
 EDDL_REPOSITORY=https://github.com/deephealthproject/eddl.git
 EDDL_BRANCH=master
-EDDL_REVISION=7467cb6
+EDDL_REVISION= 7467cb6
 
 # PyEDDL repository
 PYEDDL_REPOSITORY=https://github.com/deephealthproject/pyeddl.git
