point to pyeddl 8c722f2 - eddl 494630f0

--- a/settings.conf
+++ b/settings.conf
@@ -37,10 +37,10 @@ PYECVL_REVISION=b8a1384
 
 # EDDL repository 
 EDDL_REPOSITORY=https://github.com/deephealthproject/eddl.git
-EDDL_BRANCH=master
-EDDL_REVISION=690f3b6c
+EDDL_BRANCH=develop
+EDDL_REVISION=494630f0
 
 # PyEDDL repository
 PYEDDL_REPOSITORY=https://github.com/deephealthproject/pyeddl.git
-PYEDDL_BRANCH=master
-PYEDDL_REVISION=becc3a0
+PYEDDL_BRANCH=update_to_eddl_develop
+PYEDDL_REVISION=8c722f2
