--- a/settings.conf
+++ b/settings.conf
@@ -33,14 +33,14 @@ ECVL_REVISION=252a97e
 # PyECVL
 PYECVL_REPOSITORY=https://github.com/deephealthproject/pyecvl.git
 PYECVL_BRANCH=master
-PYECVL_REVISION=b8a1384
+PYECVL_REVISION=47dc026
 
 # EDDL repository 
 EDDL_REPOSITORY=https://github.com/deephealthproject/eddl.git
-EDDL_BRANCH=develop
-EDDL_REVISION=288af343
+EDDL_BRANCH=master
+EDDL_REVISION=5ab93fc0
 
 # PyEDDL repository
 PYEDDL_REPOSITORY=https://github.com/deephealthproject/pyeddl.git
-PYEDDL_BRANCH=update_to_eddl_develop
-PYEDDL_REVISION=02779c8
+PYEDDL_BRANCH=master
+PYEDDL_REVISION=cf34cca
