--- a/settings.conf
+++ b/settings.conf
@@ -1,8 +1,8 @@
-# set build target (CPU or GPU)
+# set build target (CPU, GPU, CUDNN)
 BUILD_TARGET=GPU
 
-# enable/disable suffix `-cpu` or `-gpu`
-ENABLE_TARGET_SUFFIX_IMAGE_TAG=false
+# enable/disable suffix `-cpu`, `-gpu`, `-cudnn`
+ENABLE_TARGET_SUFFIX_IMAGE_TAG=true
 
 # set docker user credentials
 #DOCKER_USER=deephealth
